fixed alignment of name at index.html

--- a/styles/main.css
+++ b/styles/main.css
@@ -36,6 +36,7 @@ h1{
     font-family: 'Noto Serif', serif;
     /*color:rgb(7, 17, 85);*/
     color: whitesmoke;
+    text-align: center;
 }
 h2{
     color:aqua;
